; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/wanleg/extr_tapdances.c_LYR75_finished.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/wanleg/extr_tapdances.c_LYR75_finished.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@LYR75tap_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@KC_PSLS = common dso_local global i32 0, align 4
@_GK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LYR75_finished(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @cur_dance(i32* %5)
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @LYR75tap_state, i32 0, i32 0), align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @LYR75tap_state, i32 0, i32 0), align 4
  switch i32 %7, label %21 [
    i32 128, label %8
    i32 129, label %11
    i32 130, label %14
  ]

8:                                                ; preds = %2
  %9 = load i32, i32* @KC_PSLS, align 4
  %10 = call i32 @register_code(i32 %9)
  br label %21

11:                                               ; preds = %2
  %12 = load i32, i32* @_GK, align 4
  %13 = call i32 @set_single_persistent_default_layer(i32 %12)
  br label %21

14:                                               ; preds = %2
  %15 = load i32, i32* @KC_PSLS, align 4
  %16 = call i32 @register_code(i32 %15)
  %17 = load i32, i32* @KC_PSLS, align 4
  %18 = call i32 @unregister_code(i32 %17)
  %19 = load i32, i32* @KC_PSLS, align 4
  %20 = call i32 @register_code(i32 %19)
  br label %21

21:                                               ; preds = %14, %2, %11, %8
  ret void
}

declare dso_local i32 @cur_dance(i32*) #1

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @set_single_persistent_default_layer(i32) #1

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
